--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@kubernetes/client-node": "^0.13.2",
+    "async": "^3.2.0",
     "express": "^4.17.1"
   }
 }
