--- a/src/deployment.yaml
+++ b/src/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: node-api
     spec:
+      serviceAccountName: node-apis
       containers:
         - name: node-api
           image: ilthi96/node-api:v1.0.0
@@ -37,3 +38,44 @@ spec:
       name: http
       port: 80
       targetPort: 3000
+
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: node-apis
+---
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: node-apis
+rules:
+  - apiGroups:
+      - ""
+      - "apps"
+      - "batch"
+    resources:
+      - endpoints
+      - deployments
+      - pods
+      - jobs
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - delete
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: node-apis
+  namespace: default
+subjects:
+  - kind: ServiceAccount
+    name: node-apis
+    namespace: default
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: node-apis
