--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@kubernetes/client-node": "^0.13.2",
     "async": "^3.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.9"
   }
